--- a/playground.ipynb
+++ b/playground.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-25T11:00:29.212951Z",
-     "start_time": "2024-08-25T11:00:29.108204Z"
+     "end_time": "2024-08-25T16:16:19.432444Z",
+     "start_time": "2024-08-25T16:16:08.980924Z"
     }
    },
    "source": [
@@ -17,17 +17,8 @@
     "%load_ext autoreload\n",
     "%autoreload 2"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {
@@ -723,8 +714,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-25T12:46:37.097003Z",
-     "start_time": "2024-08-25T12:45:58.790734Z"
+     "end_time": "2024-08-25T16:41:52.060551Z",
+     "start_time": "2024-08-25T16:29:55.202510Z"
     }
    },
    "cell_type": "code",
@@ -737,7 +728,8 @@
     "logical_op_directions = ('x')\n",
     "detectors = ('Z',)\n",
     "num_vortexes = (0,0)\n",
-    "dx, dy = 12, 6\n",
+    "dx, dy = 21, 12\n",
+    "res_list = []\n",
     "\n",
     "code = FloquetCode(dx, dy, boundary_conditions=boundary_conditions,\n",
     "                       num_vortexes=num_vortexes, geometry=geometry, detectors=detectors)\n",
@@ -746,7 +738,7 @@
     "noise_type = 'DEPOLARIZE1'\n",
     "arr = np.zeros([5,3])\n",
     "\n",
-    "for i,j in product(range(0,1),range(-1,2)):\n",
+    "for i,j in product(range(0,1),range(-3,4)):\n",
     "    vor = (i,j)\n",
     "    code = FloquetCode(dx, dy, boundary_conditions=boundary_conditions,\n",
     "                       num_vortexes=vor, geometry=geometry, detectors=detectors)\n",
@@ -762,6 +754,7 @@
     "    except:\n",
     "        graph_dist = 0\n",
     "    # arr[i+2,j+1] = graph_dist\n",
+    "    res_list.append(graph_dist)\n",
     "    print(f\"vortex {vor}: {graph_dist=}\")\n",
     "plt.imshow(arr)\n",
     "plt.colorbar()"
@@ -773,20 +766,28 @@
      "output_type": "stream",
      "text": [
       "num logical qubits:  2\n",
-      "vortex (0, -1): graph_dist=7\n",
+      "vortex (0, -3): graph_dist=13\n",
       "num logical qubits:  2\n",
-      "vortex (0, 0): graph_dist=8\n",
+      "vortex (0, -2): graph_dist=14\n",
       "num logical qubits:  2\n",
-      "vortex (0, 1): graph_dist=9\n"
+      "vortex (0, -1): graph_dist=15\n",
+      "num logical qubits:  2\n",
+      "vortex (0, 0): graph_dist=16\n",
+      "num logical qubits:  2\n",
+      "vortex (0, 1): graph_dist=17\n",
+      "num logical qubits:  2\n",
+      "vortex (0, 2): graph_dist=18\n",
+      "num logical qubits:  2\n",
+      "vortex (0, 3): graph_dist=19\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x234a72bbe90>"
+       "<matplotlib.colorbar.Colorbar at 0x1f5065e5760>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -801,7 +802,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 61
+   "execution_count": 4
   },
   {
    "metadata": {},
